Implemented affiliate-links as well
