# openapi/rewardful.yaml
@@ -169,6 +169,48 @@ components:
         - visitors
         - leads
         - conversions
+    AffiliateLink:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+          description: The unique identifier for the affiliate link.
+          example: f46a912b-08bc-4332-8771-c857e11ad9dd
+        url:
+          type: string
+          format: uri
+          description: The URL associated with the affiliate link.
+          example: https://www.demo.com:8081/?via=luke
+        token:
+          type: string
+          description: The unique token for the affiliate link, usually a short identifier.
+          example: luke
+        visitors:
+          type: integer
+          description: The number of visitors who have used this affiliate link.
+          example: 10
+        leads:
+          type: integer
+          description: The number of leads generated by this affiliate link.
+          example: 5
+        conversions:
+          type: integer
+          description: The number of conversions generated by this affiliate link.
+          example: 3
+        affiliate_id:
+          type: string
+          format: uuid
+          description: The ID of the affiliate associated with this link.
+          example: aaac9869-4242-4db9-afb1-f3518ef627c5
+      required:
+        - id
+        - url
+        - token
+        - visitors
+        - leads
+        - conversions
+        - affiliate_id
     Pagination:
       type: object
       properties:
@@ -309,6 +351,65 @@ components:
       required:
         - sso
         - affiliate
+    ListAffiliateLinksResponse:
+      type: object
+      properties:
+        pagination:
+          allOf:
+            - $ref: "#/components/schemas/Pagination"
+            - properties:
+                previous_page:
+                  type: number
+                  nullable: true
+                current_page:
+                  type: number
+                  example: 1
+                next_page:
+                  type: number
+                  nullable: true
+                  example: 2
+                count:
+                  type: number
+                  example: 25
+                limit:
+                  type: number
+                  example: 25
+                total_pages:
+                  type: number
+                  example: 10
+                total_count:
+                  type: number
+                  example: 250
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/AffiliateLink"
+          description: List of affiliate links
+      required:
+        - pagination
+        - data
+    CreateAffiliateLinkRequest:
+      type: object
+      properties:
+        affiliate_id:
+          type: string
+          format: uuid
+          description: The ID of the affiliate associated with this link.
+          example: f46a912b-08bc-4332-8771-c857e11ad9dd
+        token:
+          type: string
+          description: The unique token for the affiliate link, usually a short identifier.
+          example: luke-skywalker
+      required:
+        - affiliate_id
+        - token
+    UpdateAffiliateLinkRequest:
+      type: object
+      properties:
+        token:
+          type: string
+          description: The new unique token for the affiliate link.
+          example: darth-vader
   parameters: {}
 paths:
   /affiliates:
@@ -459,3 +560,98 @@ paths:
           description: Unauthorized - Invalid API key or permissions
         "404":
           description: Affiliate not found
+  /affiliate_links:
+    get:
+      description: Retrieve a list of all affiliate links with pagination
+      summary: List all affiliate links
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Object containing pagination info and an array of AffiliateLink
+            objects.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ListAffiliateLinksResponse"
+        "401":
+          description: Unauthorized - Invalid API key or permissions
+    post:
+      description: Create a new affiliate link
+      summary: Create an affiliate link
+      security:
+        - bearerAuth: []
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: "#/components/schemas/CreateAffiliateLinkRequest"
+      responses:
+        "201":
+          description: Affiliate link created successfully.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AffiliateLink"
+        "400":
+          description: Bad Request - Invalid input data
+        "401":
+          description: Unauthorized - Invalid API key or permissions
+  /affiliate_links/{id}:
+    get:
+      description: Retrieve a single affiliate link by its unique ID
+      summary: Get an affiliate link
+      security:
+        - bearerAuth: []
+      parameters:
+        - schema:
+            type: string
+            format: uuid
+            description: The unique identifier of the affiliate link
+            example: d0ed8392-8880-4f39-8715-60230f9eceab
+          required: true
+          name: id
+          in: path
+      responses:
+        "200":
+          description: AffiliateLink object for the specified ID.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AffiliateLink"
+        "401":
+          description: Unauthorized - Invalid API key or permissions
+        "404":
+          description: Affiliate link not found
+    put:
+      description: Update an existing affiliate link by its unique ID
+      summary: Update an affiliate link
+      security:
+        - bearerAuth: []
+      parameters:
+        - schema:
+            type: string
+            format: uuid
+            description: The unique identifier of the affiliate link to update.
+            example: d0ed8392-8880-4f39-8715-60230f9eceab
+          required: true
+          name: id
+          in: path
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: "#/components/schemas/UpdateAffiliateLinkRequest"
+      responses:
+        "200":
+          description: Affiliate link updated successfully.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AffiliateLink"
+        "400":
+          description: Bad Request - Invalid input data
+        "401":
+          description: Unauthorized - Invalid API key or permissions
+        "404":
+          description: Affiliate link not found
